--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div className="container-fluid" id="root">Heres the index page...</div>
+    <div className="container-fluid" id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
